# elite-v2

./: MANIFEST.in  README.md  pyproject.toml  setup.py
erpnext-elite-theme/: .gitignore
erpnext-elite-theme/erpnext_elite_theme/: modules.txt
erpnext-elite-theme/erpnext_elite_theme/public/css/: elite_login.css
erpnext-elite-theme/erpnext_elite_theme/public/js/: elite_login.js
erpnext-elite-theme/preview/: login-preview.html  quotation-preview.html
erpnext_elite_theme/: hooks.py  install.py
erpnext_elite_theme/doctype/elite_theme_settings/: elite_theme_settings.json  elite_theme_settings.py
erpnext_elite_theme/page/elite_theme_settings/: elite_theme_settings.js  elite_theme_settings.json
erpnext_elite_theme/public/css/: elite_login.css  elite_theme.css
erpnext_elite_theme/public/js/: elite_login.js  elite_theme.js
preview/: index.html  invoice-preview.html  login-preview.html  quotation-preview.html
